# gproject

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/gproject/: __init__.py  __main__.py  app.py  config.py  db.py  export.py  models.py  scheduling.py  seed.py
src/gproject/modals/: confirm.py  dependency.py  export_form.py  filter_bar.py  project_form.py  project_picker.py  task_form.py
src/gproject/screens/: main.py
src/gproject/styles/: app.tcss
src/gproject/widgets/: gantt_chart.py  kanban_board.py
tests/: test_app.py  test_db.py  test_scheduling.py
